# ot-commissioner-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml
.cargo/: mutants.toml
.github/workflows/: fuzz.yml  interop.yml  quality.yml
docs/: INTEROP.md  MUTATION_SURVIVORS.md  PARITY.md  VECTORS.md
examples/: commissionerctl.rs  dataset_decode.rs  live_parity_probe.rs  live_scan_diag_probe.rs  smoke.rs
examples/netdiag/: collect.rs  graph.rs  main.rs  model.rs  report.rs
examples/support/: args.rs  mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: coap_message.rs  dataset.rs  dtls_client_hello.rs  dtls_handshake.rs  dtls_hello_verify.rs  dtls_record.rs  dtls_server_hello.rs  ecjpake_key_exchange.rs  ecjpake_kkpp.rs  join_fin.rs  net_diag_data.rs  tlv_set.rs  udp_rx.rs
src/: dataset.rs  error.rs  lib.rs  main.rs  tlv.rs
src/cli/: config.rs  console.rs  interpreter.rs  json.rs  mod.rs  value.rs
src/commissioner/: config.rs  harness.rs  joiner.rs  mod.rs  types.rs
src/commissioner/client/: commands.rs  datasets.rs  diagnostics.rs  mod.rs  relay.rs  transport.rs
src/commissioner/tests/: api.rs  joiner_sessions.rs  mod.rs  more.rs  routing.rs
src/crypto/: mod.rs  pskc.rs  record.rs
src/crypto/ecjpake/: codec.rs  mod.rs  schnorr.rs  tests.rs
src/dtls/: constants.rs  handshake.rs  hello.rs  key_schedule.rs  mod.rs  record.rs  record_protection.rs  session.rs  test_support.rs  thread_handshake.rs  thread_server_handshake.rs  util.rs
src/dtls/tests/: codec.rs  framing.rs  hello.rs  keys.rs  mod.rs  server_session.rs
src/meshcop/: builders.rs  coap.rs  constants.rs  flags.rs  mod.rs  parsers.rs  types.rs  util.rs
src/meshcop/diag/: decode.rs  diag_flags.rs  mod.rs  model.rs
src/meshcop/tests/: builders.rs  mod.rs  netdiag.rs  parsers.rs  proxy.rs
tests/: interop_openthread.rs  live_border_router.rs
tools/: mbedtls_ecjpake_dtls_server.c  mbedtls_ecjpake_verify_round_two.c
tools/ci/: coverage.sh  interop.sh  mutants.sh
